--- a/src/lib/Dialog/index.scss
+++ b/src/lib/Dialog/index.scss
@@ -5,23 +5,39 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  min-width: 520px;
+  border-radius: 2px;
+  box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014,
+    0 9px 28px 8px #0000000d;
+  pointer-events: auto;
+  z-index: 1;
   &-mask {
     position: fixed;
     height: 100%;
     width: 100%;
     top: 0;
     left: 0;
-    background: fade-out($color: #000000, $amount: 0.7);
+    background-color: #00000073;
   }
   &-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 24px;
+    color: #000000d9;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    word-wrap: break-word;
+    border-bottom: 1px solid #f0f0f0;
   }
   &-main {
+    padding: 24px;
   }
   &-footer {
-  }
-  &-close {
-    position: absolute;
-    top: 0;
-    right: 0;
+    padding: 10px 16px;
+    border-top: 1px solid #f0f0f0;
+    display: flex;
+    justify-content: flex-end;
   }
 }
